# rusty_algo

./: CHANGELOG.md  Cargo.toml  README.md
benches/: bench.rs
src/: devide_and_conquer.rs  lib.rs  sorting.rs
src/book/: chapter2.rs  mod.rs
