[lib]
name = "rusty_algo"

[package]
name = "rusty_algo"
version = "0.2.0"
edition = "2021"
authors = ["Lucas Vieira dos Santos <lucas6eng@gmail.com>"]
description = "Implementations of algorithms from 'Introduction to Algorithms' by Cormen et al."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/iamlucasvieira/rusty_algo"
keywords = ["algorithms", "data-structures", "rust"]
categories = ["algorithms", "data-structures"]

[[bench]]
harness = false
name = "bench"

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
